# aitools

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_RECIPES.md  Dockerfile  Dockerfile.gitea-mcp  Dockerfile.goose  Dockerfile.kimi  Dockerfile.playwright  Dockerfile.qwen  Dockerfile.vibe  QUICKSTART.md  README.md  TROUBLESHOOTING.md  WEB_EXTRACTION.md  deploy.ps1  deploy.sh  docker-compose.llm.yaml  docker-compose.opensearch.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  searxng-limiter.toml  searxng-settings.yml  setup.py  start.ps1  test-goose.ps1  test.py  test_docling.py
.claude/: settings.local.json
config/: models.yaml  roles.yaml
config/agents/: coder.yaml  researcher.yaml  reviewer.yaml
config/models/: qwen-vl.yaml  qwen3-coder-next.yaml  qwen3-next.yaml
data/: devstral-chat-template.jinja  devstral-chat-template.v1-no-tools.jinja  llamaswap-config.yaml
mcp_gateway/: __init__.py  agent_runner.py  code_sandbox.py  coding_agent.py  config.py  docker_playwright.py  documents.py  fetch.py  gateway.py  gitea.py  knowledge_base.py  llm.py  logger.py  markitdown_client.py  models_config.py  preload.py  processor.py  roles.py  routing.py  utils.py
mcp_gateway/plugins/: __init__.py  agent.py  gitea_plugin.py  (+4 more)
skills/: README.md  agent-collaboration.md  infrastructure.md  text-processing.md  web-research.md
src/: agent_runner.py  config.py  docker_playwright.py  documents.py  fetch.py  gateway.py  gitea.py  http_bridge.py  knowledge_base.py  markitdown_client.py  routing.py  utils.py
