[project]
name = "mcp-gateway"
version = "0.3.0"
description = "Lean MCP gateway for web search and document fetching"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
markitdown = ["markitdown[all]", "openai"]
playwright = ["playwright>=1.40.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
mcp-gateway = "mcp_gateway.gateway:run_stdio"
mcp-gateway-sse = "mcp_gateway.gateway:run_sse"

[tool.setuptools]
packages = ["mcp_gateway"]

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
